--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
     "private": true,
-    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build"
@@ -8,6 +7,13 @@
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
+        "tailwindcss": "^3.3.3",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "autoprefixer": "^10.4.15",
+        "postcss": "^8.4.30",
+        "postcss-nested": "^6.0.1",
+        "postcss-nesting": "^12.0.1"
     }
 }
